--- a/src/firebaseConfig.js.template
+++ b/src/firebaseConfig.js.template
@@ -12,7 +12,7 @@
 
 // Import the functions you need from the SDKs you need
 import { initializeApp } from "firebase/app"
-import { getDatabase, set, ref } from "firebase/database"
+import { getDatabase, set, get, ref } from "firebase/database"
 import { getAuth, signInAnonymously, onAuthStateChanged } from "firebase/auth"
 
 // Your web app's Firebase configuration
@@ -38,8 +38,11 @@ onAuthStateChanged(auth, (user) => {
 })
 
 /* Common Firebase functions for external use */
-export const createNewLobby = (lobby) => {
-    set(ref(database, "games/" + lobby), {
+
+// Called by clicking the "Create lobby" button in StartScreen.
+// Returns true if the lobby creation was successful, false otherwise.
+export const createNewLobby = async (lobbyID) => {
+    await set(ref(database, getLobbyRef(lobbyID)), {
         gameEvent: '', // signal event to players
         players: {
             1: {
@@ -61,6 +64,31 @@ export const createNewLobby = (lobby) => {
         },
         cards: {} // actual information about each card (location is specified in earlier fields)
     })
+
+    return true
+}
+
+// Called by clicking the "Join Lobby" button in StartScreen. Returns the
+// number of the player, or -1 if the lobby could not be joined.
+// TODO: Handle player joining BACK into a lobby
+export const joinLobby = async (lobbyID) => {
+    let player = -1
+
+    await get(ref(database, getLobbyRef(lobbyID) + '/players')).then((snapshot) => {
+        if (snapshot.exists()) {
+            let players = Object.keys(snapshot.val()).length
+            if (players < 4) {
+                player = players + 1
+                set(ref(database, getLobbyRef(lobbyID) + '/players/' + player), {
+                    userID: userID,
+                    cards: {}, // cards in the players hand
+                    ready: false // signal that the player has received event (confirmation = toggle, not true)
+                })
+            }
+        }
+    })
+
+    return player
 }
 
 // Returns database reference string to the given lobby
