Added semi-automated sensitivity templating

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 # production
 /build
 
-# templated
+# templated for sensitive data
+/sensitiveTemplates/gitlessTrack
 /src/firebaseConfig.js
 
 # misc
