--- a/sensitiveTemplates/firebaseConfig.js.template
+++ b/sensitiveTemplates/firebaseConfig.js.template
@@ -56,46 +56,46 @@ export const createNewLobby = async (lobbyID) => {
             1: {
                 userID: userID,
                 name: 'Player 1',
-                cards: {}, // cards in the players hand
+                cards: [], // cards in the players hand
                 role: randomRoles[0],
                 ready: false // signal that the player has received event (confirmation = toggle, not true)
             },
             2: {
                 userID: '',
                 name: 'Player 2',
-                cards: {}, // cards in the players hand
+                cards: [], // cards in the players hand
                 role: randomRoles[1],
                 ready: false // signal that the player has received event (confirmation = toggle, not true)
             },
             3: {
                 userID: '',
                 name: 'Player 3',
-                cards: {}, // cards in the players hand
+                cards: [], // cards in the players hand
                 role: randomRoles[2],
                 ready: false // signal that the player has received event (confirmation = toggle, not true)
             },
             4: {
                 userID: '',
                 name: 'Player 4',
-                cards: {}, // cards in the players hand
+                cards: [], // cards in the players hand
                 role: randomRoles[3],
                 ready: false // signal that the player has received event (confirmation = toggle, not true)
             }
         },
         turn: 0,
         currentPlayer: 1,
-        absent: {}, // cards that have not yet been added to play
+        absent: [], // cards that have not yet been added to play
         table: {
             thanos: 1, // what sector thanos is currently looking at
             infinityStones: Object.fromEntries(stoneColours.map(k => [k, 0])), // progress of stones Thanos possesses
             playerSector: 0, // what sector the current player is deployed in
             sectors: {
-                1: {}, // cards in sector 1
-                2: {}, // cards in sector 2
-                3: {} // cards in sector 3
+                1: [], // cards in sector 1
+                2: [], // cards in sector 2
+                3: [] // cards in sector 3
             }
         },
-        cards: {} // actual information about each card (location is specified in earlier fields)
+        cards: [] // actual information about each card (location is specified in earlier fields)
     })
 
     return true
