--- a/sensitiveTemplates/firebaseConfig.js.template
+++ b/sensitiveTemplates/firebaseConfig.js.template
@@ -49,6 +49,56 @@ onAuthStateChanged(auth, (user) => {
 export const createNewLobby = async (lobbyID) => {
     let randomRoles = shuffleArray(roles)
     await set(ref(database, getLobbyRef(lobbyID)), {
+        // gameEvent: '', // signal event to players
+        // state: 0, // 0: game waiting, 1: game starting, 2: game started, 3: game ended
+        // players: {
+        //     playerNum: 1,
+        //     1: {
+        //         userID: userID,
+        //         name: 'Player 1',
+        //         cards: [], // cards in the players hand
+        //         role: randomRoles[0],
+        //         ready: false // signal that the player has received event (confirmation = toggle, not true)
+        //     },
+        //     2: {
+        //         userID: '',
+        //         name: 'Player 2',
+        //         cards: [], // cards in the players hand
+        //         role: randomRoles[1],
+        //         ready: false // signal that the player has received event (confirmation = toggle, not true)
+        //     },
+        //     3: {
+        //         userID: '',
+        //         name: 'Player 3',
+        //         cards: [], // cards in the players hand
+        //         role: randomRoles[2],
+        //         ready: false // signal that the player has received event (confirmation = toggle, not true)
+        //     },
+        //     4: {
+        //         userID: '',
+        //         name: 'Player 4',
+        //         cards: [], // cards in the players hand
+        //         role: randomRoles[3],
+        //         ready: false // signal that the player has received event (confirmation = toggle, not true)
+        //     }
+        // },
+        // turn: 0,
+        // currentPlayer: 1,
+        // absent: [], // cards that have not yet been added to play
+        // table: {
+        //     thanos: 1, // what sector thanos is currently looking at
+        //     infinityStones: Object.fromEntries(stoneColours.map(k => [k, 0])), // progress of stones Thanos possesses
+        //     playerSector: 0, // what sector the current player is deployed in
+        //     sectors: {
+        //         1: [], // cards in sector 1
+        //         2: [], // cards in sector 2
+        //         3: [] // cards in sector 3
+        //     }
+        // },
+        // cards: [] // actual information about each card (location is specified in earlier fields)
+        
+        /* This game object is to be hardcoded for testing assets. Delete this and uncomment
+           the above version to go back to what it should be for the actual game */
         gameEvent: '', // signal event to players
         state: 0, // 0: game waiting, 1: game starting, 2: game started, 3: game ended
         players: {
@@ -56,7 +106,7 @@ export const createNewLobby = async (lobbyID) => {
             1: {
                 userID: userID,
                 name: 'Player 1',
-                cards: [], // cards in the players hand
+                cards: [6], // cards in the players hand
                 role: randomRoles[0],
                 ready: false // signal that the player has received event (confirmation = toggle, not true)
             },
@@ -88,14 +138,17 @@ export const createNewLobby = async (lobbyID) => {
         table: {
             thanos: 1, // what sector thanos is currently looking at
             infinityStones: Object.fromEntries(stoneColours.map(k => [k, 0])), // progress of stones Thanos possesses
-            playerSector: 0, // what sector the current player is deployed in
+            playerSector: 1, // what sector the current player is deployed in
             sectors: {
-                1: [], // cards in sector 1
+                1: [0, 1, 7, 8, 9], // cards in sector 1
                 2: [], // cards in sector 2
                 3: [] // cards in sector 3
             }
         },
-        cards: [] // actual information about each card (location is specified in earlier fields)
+        cards: [
+            null, null, null, null, null, null,
+            {health: 3},{health: 3},{health: 3},{health: 3}
+        ] // actual information about each card (location is specified in earlier fields)
     })
 
     return true
@@ -168,6 +221,22 @@ export const getGameObject = async (lobbyID) => {
         return null
     }
     return gameObject.val()
+}
+
+// Make the same change in a local game object, and the RTDB game object
+export const syncSetGameObject = async (lobbyID, game, valPath, newVal) => {
+    let valPathArr = valPath.split('/')
+
+    let gameIt = game
+    // Used to get gameIt only to the final object reference before value
+    let prevP = null
+    for (let p of valPathArr) {
+        if (prevP) gameIt = gameIt[prevP]
+        prevP = p
+    }
+
+    gameIt[valPathArr.at(-1)] = newVal
+    set(ref(database, `${getLobbyRef(lobbyID)}/${valPath}`), newVal)
 }
 
 // Returns database reference string to the given lobby
